0.20.21	UNRELEASED

 * In porcelain.push, default to local active branch.
   (Jelmer Vernooĳ, #846)

 * Support fetching symrefs.
   (Jelmer Vernooĳ, #485, #847)

0.20.20	2021-03-03

 * Implement ``Stash.drop``. (Peter Rowlands)

 * Support untracked symlinks to paths outside the
   repository. (Peter Rowlands, #842)

0.20.19	2021-02-11

 * Fix handling of negative matches in nested gitignores.
   (Corentin Hembise, #836)

0.20.18	2021-02-04

 * Fix formatting in setup.py. (Jelmer Vernooĳ)

 * Add release configuration. (Jelmer Vernooĳ)

0.20.17	2021-02-04

 * credentials: ignore end-of-line character. (Georges Racinet)

 * Fix failure in get_untracked_paths when the repository contains symlinks.
   (#830, #793, mattseddon)

 * docs: Clarify that Git objects are created on `git add`.
   (Utku Gultopu)

0.20.16	2021-01-16

 * Add flag to only attempt to fetch ignored untracked files when specifically requested.
   (Matt Seddon)

0.20.15	2020-12-23

 * Add some functions for parsing and writing bundles.
   (Jelmer Vernooĳ)

 * Add ``no_verify`` flag to ``porcelain.commit`` and ``Repo.do_commit``.
   (Peter Rowlands)

 * Remove dependency on external mock module.
   (Matěj Cepl, #820)

0.20.14	2020-11-26

 * Fix some stash functions on Python 3. (Peter Rowlands)

 * Fix handling of relative paths in alternates files on Python 3.
   (Georges Racinet)

0.20.13	2020-11-22

 * Add py.typed to allow type checking. (David Caro)

 * Add tests demonstrating a bug in the walker code.
   (Doug Hellman)

0.20.11	2020-10-30

 * Fix wheels build on Linux. (Ruslan Kuprieiev)

 * Enable wheels build for Python 3.9 on Linux. (Jelmer Vernooĳ)

0.20.8	2020-10-29

 * Build wheels on Mac OS X / Windows for Python 3.9.
   (Jelmer Vernooij)

0.20.7	2020-10-29

 * Check core.repositoryformatversion. (Jelmer Vernooĳ, #803)

 * Fix ACK/NACK handling in archive command handling in dulwich.client.
   (DzmitrySudnik, #805)

0.20.6	2020-08-29

 * Add a ``RefsContainer.watch`` interface.